{
    "name": "InputControls",
    "maps": [
        {
            "name": "Player",
            "id": "d9a30bb3-fcb1-4dc7-a0ed-a801de799903",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f32164a7-e4e5-49e7-9ca3-7781b2f3bf9d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0c9d5701-d48d-4027-8a5a-8a5d1cd2b004",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "b22553a0-76da-495b-87a4-e115a615cbfa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "4ed34363-f76b-4583-97cf-04e09eb253d3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "13423105-ed4f-47d5-9d36-46d9f1ba60e8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "35d312c1-a236-4e5c-a452-de79993a9aec",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e1993e6f-7f85-49c5-b5c5-e0d7d0211155",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a06647c5-2c9f-4c9b-a08a-6512a96d093d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1bb9a796-7b15-4fcb-8a94-99ffed0bf012",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c59a63c-00c2-4755-b8e4-ca2c7f180172",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Cutscene",
            "id": "8da3ee3f-4bea-4b6e-9802-989d36dbfb08",
            "actions": [
                {
                    "name": "MoveNext",
                    "type": "Button",
                    "id": "3df572dc-883e-4a4c-b18d-a389e25fb928",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "aa2583eb-6dfa-44c0-935b-da844f94cfeb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d31a4b43-3683-444b-a508-190f67954661",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveNext",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f898b2df-3511-4f85-98ed-eaf4af62e2b2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "6e94c8ca-ce93-467a-acd5-b02664300a92",
            "actions": [
                {
                    "name": "CloseMenu",
                    "type": "Button",
                    "id": "b8a01667-2acd-46eb-ae83-5a1b485c8950",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b0ff4461-58cc-4945-8999-ba5cfdeb2833",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}